[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-dates"
version = "0.1.0"
description = "Shared clinical date extraction: Russian + ISO formats, date ranges, chronological sorting"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
